# ALVR

./: Cargo.toml
.github/workflows/: arm64-encoder.yml  prepare-release.yml
alvr/encoder_arm64/: Cargo.toml  build.rs  wrapper.h
alvr/encoder_arm64/src/: encoder.rs  ipc.rs  main.rs
alvr/server_openvr/cpp/platform/win32/: Arm64EncoderIpc.cpp  Arm64EncoderIpc.h  VideoEncoderSW.cpp  VideoEncoderSW.h
alvr/xtask/src/: dependencies.rs
scripts/: test-arm64-encoder.sh  test-encoder.ps1
