[package]
name = "alvr_encoder_arm64"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "ARM64 native video encoder for ALVR using FFmpeg"

[[bin]]
name = "alvr_encoder_arm64"
path = "src/main.rs"

[dependencies]
alvr_common = { workspace = true }
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }

[build-dependencies]
bindgen = "0.72"
cc = "1"
pkg-config = "0.3"
